# examiner-assignment-solver

./: .gitignore  CMakeLists.txt  README.md  concept_presentation.cpp  io.cpp  main.cc  main.cpp  user.hpp
bachelor_presentation/: README.md  io.cc  solver.cc  solver.h
base/: professor_label.csv  student_label.csv
concept_presentation/: README.md  concept_presentation.cpp  concept_presentation_old.cpp  io.cc  io.cpp  io.h  main.cpp  parameter.cc  slot.cc  slot.h  solver.cc  solver.h  user.hpp
inc/: bit_dp_solver.h  io_util.h  professor.h  student.h  time.h
intermediate_examination/: README.md  io.cc  solver.cc  solver.h
master_presentation/: README.md  io.cc  solver.cc  solver.h
masters_presentation/: README.md  bachelor_examination.cpp  intermediate_examination.cpp  io.cpp  solver.cpp  solver.hpp  user.hpp
memo/: io.hpp  requirement.md  solver.cpp  user.hpp
research_project/: README.md  io.cc  io.cpp  io.h  main.cpp  research_project.cpp  solver.cc  solver.h  user.hpp
src/: bit_dp_solver.cc  io_util.cc  professor.cc  student.cc  time.cc
util/: io_util.cpp  io_util.hpp
